--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "mantiques",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://adrianbgo.github.io/mantiques-staging",
+  "homepage": "https://adrianbgo.github.io/mantiques",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
