--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "mantiques",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://adrianbgo.github.io/mantiques",
+  "homepage": "https://adrianbgo.github.io/mantiques/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
