--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mantiques",
   "private": false,
   "version": "0.0.0",
-  "homepage": "https://adrianbgo.github.io",
+  "homepage": "https://adrianbgo.github.io/mantiques",
   "type": "module",
   "scripts": {
     "dev": "vite",
