--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mantiques",
   "private": false,
   "version": "0.1.0",
+  "homepage": "https://adrianbgo.github.io/mantiques/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
